# logargparser

./: README.md  logargparser.py  pyproject.toml
demo/: sample.py
tests/: testlogging.py
